- Added basic authentication support for remote proxy
- Removed custom environment variables, now use PROXYUSER, PROXYPASS (Dag Wieers)
- Replaced -U/--user and -S/--pass by -P/--proxyauth (Dag Wieers)
- Added remote proxy authentication (-R/--remproxyauth) (Dag Wieers)
- Use REMPROXYUSER and REMPROXYPASS environment variables (Dag Wieers)
- Pick up proxy settings from HTTP_PROXY env var (Mark)

Changes to proxytunnel version 1.8.0 -- Mon Dec 31 16:46:52 CET 2007

- Added passfile options to read username/password from a file
- Moved manual-page from debian/ to / in source-tree
- Cleanup quiet mode, quiet/verbose mutually exclusive (fd0)
- Performance patch from Ingo Molnar
- This release was prepared at 24C3, Berlin
  (http://events.ccc.de/congress/2007/)
- Have a nice year, or as they say here:
  "Einen guten Rutsch ins 1984"

Changes to proxytunnel version 1.7.2 -- Mon Jul 30 10:18:26 CEST 2007

- Fixed buffer/malloc issue
- Clean-up usage info/help text
- Remove spurious syslog

Changes to proxytunnel version 1.7.1 -- Thu Apr 12 13:40:27 CEST 2007

- Cygwin SO_REUSEPORT stuff by Marc Heuse
- Fix some string-handling related core-dumps
- NTLM/SSL fixes by Taco IJsselmuiden <taco@varda.nl>
- NTLM fixes by Taco IJsselmuiden <taco@varda.nl>

Changes to proxytunnel version 1.7.0 -- Sun Feb 25 17:45:38 CET 2007

- Allow multiple '-H' options (headers), total size of the headers
  should not exceed 1k.
- Reworked setproctitle calls, giving an argument to -x should now
  really hide all traces of the original name, not only the arguments
  Also remove argument-info on normal (without -x) runs.
- Suggested changes (From Dag Wieers) to install-target applied 
- Change debug-output line-endings
- Change error message on 'connection closed' in analyze_HTTP
- Reworked debug-output (Dag Wieers)
- Signal handling (Dag Wieers)
- Applied (reworked) changes from Mark Cave-Ayland to support -E option
  encrypting data to the proxy with SSL
