@@ -12,6 +12,7 @@ Changes to proxytunnel version 1.8.0svn -- Sat Jan 19 04:42:11 CET 2008
 - Added remote proxy authentication (-R/--remproxyauth) (Dag Wieers)
 - Use REMPROXYUSER and REMPROXYPASS environment variables (Dag Wieers)
 - Pick up proxy settings from HTTP_PROXY env var (Mark)
+- Remote Proxy SSL (-X --encrypt-remproxy)
 
 Changes to proxytunnel version 1.8.0 -- Mon Dec 31 16:46:52 CET 2007
 
